--- a/src/app/component/character-details/character-details.component.html
+++ b/src/app/component/character-details/character-details.component.html
@@ -1,1 +1,8 @@
-<p>character-details works!</p>
+<div *ngIf="mChar">
+    <h1>{{mChar.name | titlecase}}</h1>
+    <img [src]="mChar.thumbnail" height="500px" width="500px">
+</div>
+
+<div>
+    <p>Comments section</p>
+</div>
